mvnw spotless:apply